# inv

./: .gitattributes  .gitignore  LICENSE  README.md
Assessment/velsera/: .gitignore  README.md  agent.py  app.py  baseline.py  evaluate.py  extract_diseases.py  preprocess.py  requirements.txt  train_lora.py
Assessment/velsera/tests/: test_evaluate.py
advanced_rag_systems/self_correcting/: .gitignore  Dockerfile  Makefile  README.md  evaluator_agent.py  generator_agent.py  guardrail_agent.py  ingest.py  logger.py  main.py  requirements.txt  retriever.py  utils.py
advanced_rag_systems/self_correcting/.chroma/: chroma.sqlite3
defect_detection/: .gitignore  pyproject.toml  requirements.txt
defect_detection/configs/: train.yaml
defect_detection/data/: defect_data.yaml
defect_detection/src/defect_detection/: cli.py  engine.py  utils.py
drone_detection/: drone_detection.ipynb  drone_pipeline.py  drone_tinycnn.keras  prob_thr.json
drone_detection/inferenced/: .gitignore
drone_detection/reports/: detector_report_cell3.csv
drone_detection/tiny_fcn_heatmap/: prob_thr.json  tiny_ds_fcn.keras
edge_vision_defect_detector/: .env  .gitignore  pyproject.toml  requirements.txt
edge_vision_defect_detector/.github/workflows/: ci.yml
edge_vision_defect_detector/configs/: cnn.yaml  default.yaml  rfdetr.yaml  train.yaml
edge_vision_defect_detector/labelled_data/: README.roboflow.txt
edge_vision_defect_detector/labelled_data/test/: _annotations.coco.json
edge_vision_defect_detector/labelled_data/train/: _annotations.coco.json
edge_vision_defect_detector/labelled_data/valid/: _annotations.coco.json
edge_vision_defect_detector/src/: calibrate_threshold.py  calibrate_threshold_cnn.py  candidate.py  eval_center.py  eval_center_cnn.py  features.py  infer_image.py  infer_video.py  mine_hard_negs.py  models_cnn.py  prepare_patches.py  rfdetr_eval_center.py  rfdetr_infer.py  rfdetr_train.py  rfdetr_tune_for_precision.py  rfdetr_validate.py  train_cnn.py  train_svm.py  tune_for_precision.py  utils.py  validate.py  validate_cnn.py  validate_rfdetr.py
edge_vision_defect_detector/src/edge_detector/model_zoo/: yolo.py
edge_vision_defect_detector/src/edge_detector/utils/: logging.py
edge_vision_defect_detector/tests/: test_yolo_wrapper.py
fraud-detection/: create_expectations.py  docker-compose.yml  init_ge_project.py
fraud-detection/airflow/: .env  Dockerfile  docker-compose.override.yml  docker-compose.yml  docker-compose.yml.bak  docker-compose.yml.bak2
fraud-detection/data_ingestion/: docker-compose.yml  producer.py
fraud-detection/great_expectations/: great_expectations.yml
fraud-detection/producer/: Dockerfile  producer.py
fraud-detection/tmp_transactions/: data.json  sample_transactions.csv
money_transfer/: app.py  users.json
money_transfer/templates/: dashboard.html  forgot_password.html  index.html  login.html  transfer.html
rag-implementation/velsera/: .gitignore  README.md  clean_diseases.py  confidence_retrieval.py  evidence.py  train_mini.py
(+22 files in other folders)
